# glasik-core

./: .gitignore  BENCHMARKS.md  BENCHMARKS_GCDICT.md  CODE_OF_CONDUCT.md  Cargo.toml  GLASIK_HANDOFF.md  GN_PAPER_V2.md  LATTICE_UI_HANDOFF.md  README.md  pyproject.toml
bench/: gcdict_all_corpora.js  gcdict_all_corpora_v2.js  gcdict_claude_bench.js
bench/corpora/: medium_chat.jsonl  small_chat.jsonl
bench/js-harness/: bench.js
bench/results/: 2026-04-09-final-summary.tsv  2026-04-09-layer-attribution.tsv  2026-04-10-napi-split-stream.tsv  2026-04-18-multiseed-verified.txt  2026-04-23-5corpus-verified.txt  2026-05-01-v4-local.txt
benches/: lz77_bench.rs
chrome-extension/: README.md  background.js  content.js  install-native-host.js  interceptor.js  manifest.json  popup.html  popup.js  relay.js  rules.json
data/: gn-shards.db
data/default-shards/: gn-shards.db
data/test-shards/: gn-shards.db
gn-api/: .gitignore  package.json  server.js
gn-node/: .npmignore  Cargo.toml  README.md  gn-l0-multicorpus.snapshot  gn-native.linux-x64-gnu.node  index.js  package.json
gn-node/src/: lib.rs  lib.rs.bak  vtc_patch.rs
lattice-ui/: GN-INTEGRATION.md  generate-lattice.cjs  index.html  lattice-watcher.cjs  package-lock.json  package.json
lattice-ui/public/: gen-lattice.mjs  inspect-db.mjs  lattice-glasik.json  lattice-gn.json  lattice-meta.json  lattice-openclaw.json  lattice.json
lattice-ui/src/: App.backup.jsx  App.jsx  App.snapshot.SIZE-WORKING.jsx  App.snapshot.clean-recovered.jsx  App.snapshot.clean-visuals.jsx  App.snapshot.crystal-anisotropic.jsx  App.snapshot.crystal-density-fixed.jsx  App.snapshot.crystal-final-shape.jsx  App.snapshot.crystal-material.jsx  App.snapshot.current-working.jsx  App.snapshot.curve-weighted.jsx  App.snapshot.edge-color.jsx  App.snapshot.edge-filter-fixed.jsx  App.snapshot.edge-pulse.jsx  App.snapshot.end-of-session.jsx  App.snapshot.flow-speed.jsx  App.snapshot.formation-fixed.jsx  App.snapshot.hitbox.jsx  App.snapshot.pair-ready.jsx  App.snapshot.pairs-convex.jsx  App.snapshot.pairs-geometry-live.jsx  App.snapshot.pairs-normalized-sized.jsx  App.snapshot.pairs.jsx  App.snapshot.pre-full-rewrite.jsx  App.snapshot.pre-rotation-toggle-fix.jsx  App.snapshot.refined-system.jsx  App.snapshot.rotation-organic.jsx  App.snapshot.selection-highlight.jsx  App.snapshot.size-debug.jsx  App.snapshot.true-3d-beautiful.jsx  App.snapshot.tube-edges.jsx  AppDebug.jsx  (+15 more)
scripts/: bench_all3.py  bench_repeat.py  bench_static_repeat.py  final_bench.py  gn_static_dict.json  json_to_bin.py  semantic_l3.py  train_general_dict.py  train_static_dict.py
src/: ans_table.rs  fractal.rs  level4.rs  lib.rs  pipeline.rs  sliding_v2_l4.rs  sliding_v3.rs  static_dict.rs
(+17 files in other folders)
