[package]
name = "glasik-core"
version = "0.1.0"
edition = "2021"
description = "Glasik Notation core"
license = "MIT"
repository = "https://github.com/atomsrkuul/glasik-core"

[lib]
name = "glasik_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec_bench"
harness = false
