[package]
name = "gn-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi6", "tokio_rt", "async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
glasik-core = { path = ".." }
libdeflater = "1.25"
rayon = "1.10"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
